# prism

./: .gitattributes  .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  Cargo.toml  LICENSE  NEXT_IMPROVEMENTS.md  PRISM.md
crates/prism-cli/: Cargo.toml
crates/prism-cli/src/: auth_commands.rs  auth_storage.rs  cli.rs  commands.rs  daemon_log.rs  display.rs  git_support.rs  github_attestation.rs  main.rs  mcp.rs  operator_auth.rs  parsing.rs  projection_commands.rs  protected_state_commands.rs  runtime.rs  service.rs  service_state.rs  spec_commands.rs  workspace_root.rs  worktree_commands.rs
crates/prism-core/: Cargo.toml
crates/prism-core/src/: admission.rs  checkpoint_materializer.rs  concept_events.rs  concept_relation_events.rs  contract_events.rs  coordination_authority_api.rs  coordination_authority_sync.rs  coordination_mutation_error.rs  coordination_persistence.rs  coordination_reads.rs  coordination_snapshot_sanitization.rs  coordination_startup_checkpoint.rs  curator.rs  curator_support.rs  history_backend.rs  indexer.rs  indexer_support.rs  invalidation.rs  layout.rs  lib.rs  local_credentials.rs  local_principal_registry.rs  materialization.rs  memory_events.rs  memory_refresh.rs  mutation_trace.rs  observed_change_tracker.rs  outcome_backend.rs  parse_pipeline.rs  patch_outcomes.rs  path_identity.rs  path_identity_repair.rs  peer_runtime.rs  principal_registry.rs  prism_doc.rs  prism_paths.rs  projection_hydration.rs  published_knowledge.rs  published_plans.rs  reanchor.rs  (+27 more)
crates/prism-core/src/coordination_authority_store/: factory.rs  git_shared_refs.rs  mod.rs  sqlite.rs  traits.rs  types.rs
crates/prism-core/src/coordination_materialized_store/: mod.rs  sqlite.rs  store_backed.rs  traits.rs  types.rs
crates/prism-core/src/execution_substrate/: mod.rs  store.rs  types.rs
crates/prism-core/src/prism_doc/: export.rs  repo_state.rs
crates/prism-core/src/protected_state/: canonical.rs  envelope.rs  migration.rs  mod.rs  operators.rs  repo_streams.rs  runtime_sync.rs  streams.rs  trust.rs
crates/prism-core/src/runtime_engine/: context.rs  engine.rs  generation.rs  mod.rs  queue.rs
crates/prism-core/src/spec_engine/: discovery.rs  mod.rs  parse.rs  types.rs
crates/prism-core/src/spec_materialized_store/: mod.rs  sqlite.rs  traits.rs  types.rs
crates/prism-curator/: Cargo.toml
crates/prism-curator/src/: codex.rs  lib.rs  support.rs  synthesis.rs  tests.rs  types.rs
crates/prism-js/: Cargo.toml
crates/prism-js/src/: api_types.rs  compiler_surface.rs  docs.rs  lib.rs  query_surface.rs  runtime.rs  surface_registry.rs  tests.rs
crates/prism-lang-python/: Cargo.toml
crates/prism-lang-python/src/: lib.rs  parser.rs  paths.rs  syntax.rs  tests.rs
crates/prism-lang-rust/: Cargo.toml
crates/prism-lang-rust/src/: lib.rs  parser.rs  paths.rs  syntax.rs  tests.rs
crates/prism-mcp/: Cargo.toml  build.rs
crates/prism-mcp/src/: ambiguity.rs  bridge_auth.rs  capabilities_resource.rs  change_views.rs  common.rs  compact_followups.rs  compact_tools.rs  concept_followthrough.rs  concept_resolution.rs  coordination_executor.rs  coordination_surface.rs  daemon_log.rs  daemon_mode.rs  dashboard_assets.rs  dashboard_events.rs  dashboard_read_models.rs  dashboard_router.rs  dashboard_types.rs  diagnostics.rs  diagnostics_state.rs  discovery_bundle.rs  discovery_helpers.rs  features.rs  file_queries.rs  git_execution.rs  git_support.rs  host_mutations.rs  host_resources.rs  instructions.rs  js_runtime.rs  lease_advice.rs  lib.rs  lineage_views.rs  log_scope.rs  logging.rs  main.rs  mcp_call_log.rs  memory_metadata.rs  mutation_provenance.rs  mutation_trace.rs  (+65 more)
crates/prism-mcp/src/compact_tools/: concept.rs  expand.rs  locate.rs  open.rs  suggested_actions.rs  task_brief.rs  text_fragments.rs  workset.rs
crates/prism-mcp/src/prism_code_compiler/: analysis.rs  entry.rs  input.rs  mod.rs  program_ir.rs  source.rs  transaction_plan.rs  typescript.rs  write_runtime.rs
crates/prism-mcp/src/ssr_console/: assets.rs  concepts.rs  html.rs  mermaid.rs  mod.rs  routes.rs
crates/prism-mcp/src/tests/: coordination_surface.rs  query_history.rs  server_resources.rs  server_tool_calls.rs  server_transport.rs  view_surfaces.rs
crates/prism-memory/: Cargo.toml
crates/prism-memory/src/: anchored.rs  common.rs  composite.rs  entry_store.rs  episodic.rs  lib.rs  outcome.rs  outcome_query.rs  recall.rs  semantic.rs  session.rs  structural.rs  structural_features.rs  tests.rs  text.rs  types.rs
crates/prism-memory/src/semantic/: config.rs  mod.rs  openai.rs  runtime.rs
crates/prism-projections/: Cargo.toml
crates/prism-projections/src/: common.rs  concept_relations.rs  concepts.rs  contracts.rs  intent.rs  lib.rs  projections.rs  read_models.rs  tests.rs  types.rs
crates/prism-query/: Cargo.toml
crates/prism-query/src/: ad_hoc_projections.rs  common.rs  contracts.rs  coordination.rs  coordination_query_engine.rs  coordination_transaction.rs  impact.rs  intent.rs  lib.rs  materialized_runtime.rs  outcomes.rs  plan_activity.rs  plan_bindings.rs  plan_completion.rs  plan_discovery.rs  plan_hydration.rs  plan_insights.rs  plan_runtime.rs  source.rs  symbol.rs  tests.rs  types.rs
crates/prism-spec/: Cargo.toml
crates/prism-spec/src/: lib.rs  spec_refresh.rs  workspace_surface.rs
crates/prism-spec/src/spec_engine/: discovery.rs  mod.rs  parse.rs  types.rs
crates/prism-spec/src/spec_materialized_store/: mod.rs  sqlite.rs  traits.rs  types.rs
crates/prism-spec/src/spec_query/: engine.rs  mod.rs  types.rs
crates/prism-store/: Cargo.toml
crates/prism-store/src/: coordination_checkpoint.rs  graph.rs  lib.rs  memory_projection.rs  memory_store.rs  outcome_projection.rs  patch_projection.rs  persistence.rs  store.rs  tests.rs
crates/prism-store/src/sqlite/: codecs.rs  coordination_compaction.rs  coordination_events.rs  coordination_mutations.rs  event_executions.rs  graph_io.rs  history_io.rs  inference_records.rs  memory_entries.rs  migration.rs  mod.rs  outcome_events.rs  outcome_patch_projection.rs  path_identity_repair.rs  projections.rs  retry.rs  (+2 more)
(+2405 files in other folders)
