[workspace]
members = [
    "crates/prism-agent",
    "crates/prism-cli",
    "crates/prism-coordination",
    "crates/prism-core",
    "crates/prism-curator",
    "crates/prism-history",
    "crates/prism-ir",
    "crates/prism-js",
    "crates/prism-memory",
    "crates/prism-lang-json",
    "crates/prism-lang-markdown",
    "crates/prism-lang-rust",
    "crates/prism-lang-yaml",
    "crates/prism-mcp",
    "crates/prism-parser",
    "crates/prism-projections",
    "crates/prism-query",
    "crates/prism-store",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
notify = "8.2"
regex = "1.11"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
smol_str = { version = "0.2", features = ["serde"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tree-sitter = "0.26"
walkdir = "2.5"
