[workspace]
members = [
    "crates/prism-agent",
    "crates/prism-cli",
    "crates/prism-coordination",
    "crates/prism-core",
    "crates/prism-curator",
    "crates/prism-history",
    "crates/prism-ir",
    "crates/prism-js",
    "crates/prism-memory",
    "crates/prism-lang-json",
    "crates/prism-lang-markdown",
    "crates/prism-lang-python",
    "crates/prism-lang-rust",
    "crates/prism-lang-toml",
    "crates/prism-lang-yaml",
    "crates/prism-mcp",
    "crates/prism-parser",
    "crates/prism-projections",
    "crates/prism-query",
    "crates/prism-store",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
aes-gcm-siv = "0.11"
anyhow = "1.0"
pbkdf2 = "0.12"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
flate2 = "1.1"
ignore = "0.4"
notify = "8.2"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_jcs = "0.2.0"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
smol_str = { version = "0.2", features = ["serde"] }
toml = "0.8"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tree-sitter = "0.26"
tree-sitter-python = "0.25.0"
ulid = "1.2"
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
