[package]
name = "prism-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
prism-core = { path = "../prism-core" }
prism-ir = { path = "../prism-ir" }
prism-memory = { path = "../prism-memory" }
prism-query = { path = "../prism-query" }
prism-store = { path = "../prism-store" }
serde.workspace = true
serde_json.workspace = true
time = { version = "0.3", features = ["formatting", "parsing"] }
toml.workspace = true
