[package]
name = "prism-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
prism-ir = { path = "../prism-ir" }
prism-lang-json = { path = "../prism-lang-json" }
prism-lang-markdown = { path = "../prism-lang-markdown" }
prism-lang-rust = { path = "../prism-lang-rust" }
prism-lang-yaml = { path = "../prism-lang-yaml" }
prism-parser = { path = "../prism-parser" }
prism-query = { path = "../prism-query" }
prism-store = { path = "../prism-store" }
serde.workspace = true
smol_str.workspace = true
walkdir.workspace = true
