[package]
name = "prism-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
flate2.workspace = true
ignore.workspace = true
notify.workspace = true
rand.workspace = true
prism-agent = { path = "../prism-agent" }
prism-coordination = { path = "../prism-coordination" }
prism-curator = { path = "../prism-curator" }
prism-ir = { path = "../prism-ir" }
prism-history = { path = "../prism-history" }
prism-lang-json = { path = "../prism-lang-json" }
prism-lang-markdown = { path = "../prism-lang-markdown" }
prism-lang-python = { path = "../prism-lang-python" }
prism-lang-rust = { path = "../prism-lang-rust" }
prism-lang-toml = { path = "../prism-lang-toml" }
prism-lang-yaml = { path = "../prism-lang-yaml" }
prism-memory = { path = "../prism-memory" }
prism-parser = { path = "../prism-parser" }
prism-projections = { path = "../prism-projections" }
prism-query = { path = "../prism-query" }
prism-store = { path = "../prism-store" }
serde.workspace = true
serde_jcs.workspace = true
serde_json.workspace = true
sha2.workspace = true
smol_str.workspace = true
tar.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir.workspace = true
zip.workspace = true
