[package]
name = "prism-curator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
prism-agent = { path = "../prism-agent" }
prism-ir = { path = "../prism-ir" }
prism-memory = { path = "../prism-memory" }
prism-projections = { path = "../prism-projections" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
