[package]
name = "prism-js"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prism-coordination = { path = "../prism-coordination" }
prism-ir = { path = "../prism-ir" }
prism-memory = { path = "../prism-memory" }
schemars = "1.2.1"
serde.workspace = true
serde_json.workspace = true
