[package]
name = "prism-lang-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
prism-ir = { path = "../prism-ir" }
prism-parser = { path = "../prism-parser" }
smol_str.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
