[package]
name = "prism-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.8.6"
clap.workspace = true
prism-agent = { path = "../prism-agent" }
prism-coordination = { path = "../prism-coordination" }
prism-core = { path = "../prism-core" }
prism-curator = { path = "../prism-curator" }
prism-ir = { path = "../prism-ir" }
prism-js = { path = "../prism-js" }
prism-memory = { path = "../prism-memory" }
prism-query = { path = "../prism-query" }
prism-store = { path = "../prism-store" }
deno_ast = { version = "0.53.1", features = ["transpiling"] }
libc = "0.2"
rmcp = { version = "1.2.0", features = ["client", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
rquickjs = "0.11.0"
schemars = "1.2.1"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
prism-history = { path = "../prism-history" }
prism-store = { path = "../prism-store" }
