[package]
name = "prism-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
prism-coordination = { path = "../prism-coordination" }
prism-history = { path = "../prism-history" }
prism-ir = { path = "../prism-ir" }
prism-memory = { path = "../prism-memory" }
prism-projections = { path = "../prism-projections" }
prism-store = { path = "../prism-store" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
prism-spec = { path = "../prism-spec" }
