[package]
name = "prism-spec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
prism-coordination = { path = "../prism-coordination" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true

[dev-dependencies]
prism-ir = { path = "../prism-ir" }
