[package]
name = "prism-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
prism-parser = { path = "../prism-parser" }
prism-ir = { path = "../prism-ir" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
